[tool.poetry]
name = "cuss-tracker"
version = "0.1.0"
description = ""
authors = ["Wraiith32 <mailer@imaxa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyaudio = "^0.2.14"
speechrecognition = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
